--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@
 *.app
 OledDueRebuild/.vscode/c_cpp_properties.json
 OledDueRebuild/.vscode/arduino.json
+OledDueRebuild/.build/OledDueRebuild/sketch/OledDueRebuild.ino.cpp
+OledDueRebuild/.build/OledDueRebuild/build.options.json
+OledDueRebuild/.build/OledDueRebuild/includes.cache
