--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ OledDueRebuild/.build/OledDueRebuild/build.options.json
 OledDueRebuild/.build/OledDueRebuild/includes.cache
 .DS_Store
 .DS_Store
+.DS_Store
